--- a/src/main/resources/assets/virolia/lang/en_us.lang
+++ b/src/main/resources/assets/virolia/lang/en_us.lang
@@ -27,7 +27,7 @@ item.virolia.scraphite=Scraphite
 block.virolia.wayneplanks=Wayne Log
 item.virolia.virolia=Portal Igniter
 block.virolia.scraphiteore=Scraphite Ore
-item.toreinumingot.name=Toreinum
+item.toreinumingot.name=Toreinum Ingot
 tile.lurograssblock.name=Lurograss Block
 tile.wayneleaves.name=Wayne Log
 tile.lurocobblestone.name=Lurocobblestone
